# my-tiny-agents

./: .gitignore  Makefile  README.md  pyproject.toml  tiny_agents.py
.cursor/rules/: agent_development_rules.mdc  basic_rules.mdc  index.md  mcp_server_rules.mdc  rye.mdc  rye.toml
docs/: 1_of_concept.md  2_of_concept.md
servers/: command_executor_server.py  github_trends_server.py  python_executor_server.py  task_manager_server.py  web_search_server.py
src/tiny_agents/: __init__.py  __main__.py  agent.py  args.py  config.py  exceptions.py  schemas.py  ui.py
