[project]
name = "my-tiny-agents"
version = "0.1.0"
description = "A minimalist framework for LLM agents with MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "huggingface-hub[inference]>=0.20.0",
    "gtrending>=0.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "litellm>=1.0.0",
    "tiktoken>=0.5.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tiny_agents"] 